--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="The Wedding of Bibid and Junaedi"/>
-	<meta property="og:image" content="images/merge.jpg"/>
-	<meta property="og:url" content="https://ngodingsolusi.github.io/the-wedding-of-Bibid-Junaedi/"/>
+	<meta property="og:image" content="images/square1.png"/>
+	<meta property="og:url" content="https://wedding-liard-one.vercel.app/"/>
 	<meta property="og:site_name" content="The Wedding of Bibid and Junaedi"/>
 	<meta property="og:description" content="The Wedding of Bibid and Junaedi. Open source wedding invitation"/>
 
@@ -25,10 +25,10 @@
 	<meta name="twitter:creator" content="@ngodingsolusi" />
 	<meta name="twitter:title" content="The Wedding of Bibid and Junaedi" />
 	<meta name="twitter:description" content="Open Source Wedding Invitation. The Wedding of Bibid and Junaedi" />
-	<meta name="twitter:image" content="images/merge.jpg" />
-	<meta name="twitter:url" content="https://ngodingsolusi.github.io/the-wedding-of-Bibid-Junaedi/" />
+	<meta name="twitter:image" content="images/square1.png" />
+	<meta name="twitter:url" content="https://wedding-liard-one.vercel.app/" />
 
-	<link rel="icon" href="images/merge.jpg">
+	<link rel="icon" href="images/square1.png">
 
 	<!--
       //////////////////////////////////////////////////////
@@ -174,7 +174,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box fadeInUp animated-fast">
-						<img src="images/merge.jpg" alt="" class="couple-main">
+						<img src="images/square1.png" alt="" class="couple-main">
 					</div>
 				</div>
 				<div class="row">
@@ -201,7 +201,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<img src="images/merge-large.jpg" alt="" class="couple-main">
+					<img src="images/square1.png" alt="" class="couple-main">
 				</div>
 			</div>
 			<div class="row">
@@ -301,7 +301,7 @@
 							</div>
 							<div class="event-col">
 								<i class="icon-calendar"></i>
-								<span>Sabtu</span>
+								<span>Rabu</span>
 								<span class="tanggal">10 Mei 2023</span>
 							</div>
 							<p style="font-family: 'Courgette', Arial, serif">Alamat : Ds Kedung Pucang, Kec. Bener, Kab. Purworejo</p>
@@ -512,7 +512,7 @@
 					<h3 style="color: #bf9b73">Wassalamu'alaikum Wr. Wb.</h3>
 					Jazakumullahu Khairan
 					</p>
-					<img src="images/merge.jpg" width="100" height="100">
+					<img src="images/square1.png" width="100" height="100">
 					<br>
 					<h1 style="font-family: 'Satisfy', Arial, serif">Bibid & Junaedi</h1>
 					<p>
