--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<meta property="og:description" content="The Wedding of Bibid and Juna. Open source wedding invitation"/>
 
 	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:site" content="@ngodingsolusi" />
-	<meta name="twitter:creator" content="@ngodingsolusi" />
+	<meta name="twitter:site" content="@desistrom" />
+	<meta name="twitter:creator" content="@desistrom" />
 	<meta name="twitter:title" content="The Wedding of Bibid and Juna" />
 	<meta name="twitter:description" content="Open Source Wedding Invitation. The Wedding of Bibid and Juna" />
 	<meta name="twitter:image" content="images/square1.png" />
@@ -595,7 +595,7 @@
 		}*/
 	});
 
-	$.get( "https://api.github.com/repos/ngodingsolusi/the-wedding-of-Bibid-Junaedi/issues?state=all&per_page", function( data ) {
+	$.get( "https://api.github.com/repos/desistrom/wedding-template/issues?state=all&per_page", function( data ) {
 		for (let i = 0; i < data.length; i++){
 			const item = `
 				<a class="list-group-item">
