--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 						<p><b id="nama_user"></b></p>
 						<p>Kami Mengundang Anda Untuk Hadir Di Acara Pernikahan Kami.</p>
 
-						<button class="btn btn-primary" id="open-invitation">Buka Undangan</button>
+						<button class="btn btn-primary" id="open-invitation" style="background-color: #599eff; border-color: #599eff;">Buka Undangan</button>
 					</div>
 				</div>
 			</div>
