--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 							<h3 style="font-family: 'Oswald', Arial, serif;">Akad Nikah</h3>
 							<div class="event-col">
 								<i class="icon-clock"></i>
-								<span>08:00</span>
+								<span>07:00</span>
 								<span>Selesai</span>
 							</div>
 							<div class="event-col">
@@ -748,15 +748,15 @@
 					<p>Description of the slide 1</p>
 				</div>`,*/
 			},{
-				src: 'images/IMG20221217141156.jpg',
-				thumb: 'images/IMG20221217141156.jpg',
+				src: 'images/a15262c2-be6c-40a6-b431-200f82553a17.jpeg',
+				thumb: 'images/a15262c2-be6c-40a6-b431-200f82553a17.jpg',
 				/*subHtml: `<div class="lightGallery-captions">
 					<h4>Caption 1</h4>
 					<p>Description of the slide 1</p>
 				</div>`,*/
 			},{
-				src: 'images/IMG20221217141141.jpg',
-				thumb: 'images/IMG20221217141141.jpg',
+				src: 'images/c2f43af4-1aae-4487-ab50-37b4305e7157.jpg',
+				thumb: 'images/c2f43af4-1aae-4487-ab50-37b4305e7157.jpg',
 				/*subHtml: `<div class="lightGallery-captions">
 					<h4>Caption 1</h4>
 					<p>Description of the slide 1</p>
