--- a/index.html
+++ b/index.html
@@ -749,14 +749,14 @@
 				</div>`,*/
 			},{
 				src: 'images/a15262c2-be6c-40a6-b431-200f82553a17.jpeg',
-				thumb: 'images/a15262c2-be6c-40a6-b431-200f82553a17.jpg',
+				thumb: 'images/a15262c2-be6c-40a6-b431-200f82553a17.jpeg',
 				/*subHtml: `<div class="lightGallery-captions">
 					<h4>Caption 1</h4>
 					<p>Description of the slide 1</p>
 				</div>`,*/
 			},{
-				src: 'images/c2f43af4-1aae-4487-ab50-37b4305e7157.jpg',
-				thumb: 'images/c2f43af4-1aae-4487-ab50-37b4305e7157.jpg',
+				src: 'images/c2f43af4-1aae-4487-ab50-37b4305e7157.jpeg',
+				thumb: 'images/c2f43af4-1aae-4487-ab50-37b4305e7157.jpeg',
 				/*subHtml: `<div class="lightGallery-captions">
 					<h4>Caption 1</h4>
 					<p>Description of the slide 1</p>
