--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 								<span>Rabu</span>
 								<span class="tanggal">10 Mei 2023</span>
 							</div>
-							<p style="font-family: 'Courgette', Arial, serif">Alamat : Ds Kedung Pucang, Kec. Bener, Kab. Purworejo</p>
+							<p style="font-family: 'Courgette', Arial, serif">Alamat : RT 02 / RW 01 Krajan, Ds Kedung Pucang, Kec. Bener, Kab. Purworejo</p>
 
 							<a href="https://goo.gl/maps/pftLb4qQSLh8juWYA" target="_blank"
 							   class="btn btn-primary">Penunjuk Lokasi <i class="icon-map2"></i></a>
@@ -304,7 +304,7 @@
 								<span>Rabu</span>
 								<span class="tanggal">10 Mei 2023</span>
 							</div>
-							<p style="font-family: 'Courgette', Arial, serif">Alamat : Ds Kedung Pucang, Kec. Bener, Kab. Purworejo</p>
+							<p style="font-family: 'Courgette', Arial, serif">Alamat : RT 02 / RW 01 Krajan, Ds Kedung Pucang, Kec. Bener, Kab. Purworejo</p>
 
 							<a href="https://goo.gl/maps/pftLb4qQSLh8juWYA" target="_blank"
 							   class="btn btn-primary">Penunjuk Lokasi <i class="icon-map2"></i></a>
