--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>The Wedding of Bibid & Juna</title>
+	<title>The Wedding of Juna & Bibid</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="The Wedding of Bibid and Juna" />
+	<meta name="description" content="The Wedding of Juna and Bibid" />
 	<meta name="keywords" content="wedding, wedding invitation, invitation, the wedding" />
-	<meta name="author" content="Bibid & Juna" />
+	<meta name="author" content="Juna & Bibid" />
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="The Wedding of Bibid and Juna"/>
+	<meta property="og:title" content="The Wedding of Juna and Bibid"/>
 	<meta property="og:image" content="images/square1.png"/>
 	<meta property="og:url" content="https://wedding-liard-one.vercel.app/"/>
-	<meta property="og:site_name" content="The Wedding of Bibid and Juna"/>
-	<meta property="og:description" content="The Wedding of Bibid and Juna. Open source wedding invitation"/>
+	<meta property="og:site_name" content="The Wedding of Juna and Bibid"/>
+	<meta property="og:description" content="The Wedding of Juna and Bibid. Open source wedding invitation"/>
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@desistrom" />
 	<meta name="twitter:creator" content="@desistrom" />
-	<meta name="twitter:title" content="The Wedding of Bibid and Juna" />
-	<meta name="twitter:description" content="Open Source Wedding Invitation. The Wedding of Bibid and Juna" />
+	<meta name="twitter:title" content="The Wedding of Juna and Bibid" />
+	<meta name="twitter:description" content="Open Source Wedding Invitation. The Wedding of Juna and Bibid" />
 	<meta name="twitter:image" content="images/square1.png" />
 	<meta name="twitter:url" content="https://wedding-liard-one.vercel.app/" />
 
@@ -178,7 +178,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-						<h1>Bibid & Juna</h1>
+						<h1>Juna & Bibid</h1>
 						<p style="margin-bottom: 1em">Kepada Bapak/Ibu/Saudara/i</p>
 						<p><b id="nama_user"></b></p>
 						<p>Kami Mengundang Anda Untuk Hadir Di Acara Pernikahan Kami.</p>
@@ -206,7 +206,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h1>Bibid & Juna</h1>
+					<h1>Juna & Bibid</h1>
 					<p style="color: #bf9b73">Kami berharap Anda menjadi bagian dari hari istimewa kami!</p>
 					<div class="simply-countdown simply-countdown-wedding"></div>
 					<br>
@@ -232,20 +232,6 @@
 			</div>
 			<div class="couple-wrap animate-box">
 				<div class="couple-half">
-					<div class="groom">
-						<img src="images/bibid.png" alt="groom" class="img-responsive">
-					</div>
-					<div class="desc-groom">
-						<h3>Bidayatul Hidayah</h3>
-						<p><span style="color: #bf9b73">Putri Kedua dari</span><br>
-							<span class="parents-font">Bapak Japar Sodik</span>
-							<br>
-							<span class="parents-font">Ibu Jumilah</span>
-						</p>
-					</div>
-				</div>
-				<p class="heart text-center"><i class="icon-heart2"></i></p>
-				<div class="couple-half">
 					<div class="bride">
 						<img src="images/jun.png" alt="groom" class="img-responsive">
 					</div>
@@ -255,6 +241,20 @@
 							<span class="parents-font">Bapak Tarim</span>
 							<br>
 							<span class="parents-font">Ibu Nyamini</span>
+						</p>
+					</div>
+				</div>
+				<p class="heart text-center"><i class="icon-heart2"></i></p>
+				<div class="couple-half">
+					<div class="groom">
+						<img src="images/bibid.png" alt="groom" class="img-responsive">
+					</div>
+					<div class="desc-groom">
+						<h3>Bidayatul Hidayah</h3>
+						<p><span style="color: #bf9b73">Putri Kedua dari</span><br>
+							<span class="parents-font">Bapak Japar Sodik</span>
+							<br>
+							<span class="parents-font">Ibu Jumilah</span>
 						</p>
 					</div>
 				</div>
@@ -514,7 +514,7 @@
 					</p>
 					<img src="images/square1.png" width="300">
 					<br>
-					<h1 style="font-family: 'Satisfy', Arial, serif">Bibid & Juna</h1>
+					<h1 style="font-family: 'Satisfy', Arial, serif">Juna & Bibid</h1>
 					<p>
 					</p>
 				</div>
